Fix setting file path of the file layer through python API

BUG:398740